--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "serve": "^11.3.2",
+    "socket.io-client": "^2.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
