--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-chat-elements": "^10.14.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
